modified footer a little bit

--- a/demo/index.html
+++ b/demo/index.html
@@ -70,9 +70,9 @@
 	</main>
 	
 	<footer class="bg-light border-top" style="">
-		<div class="container py-3 text-muted">
-			Written with ❤ by <a href="https://github.com/katacarbix">Reese Jacobson</a>, whose <a href="https://pronoun.is/they/.../themself">pronoun.is/they</a>.<br>
-			Pronoun.js is a fork of <a href="https://github.com/witch-house/pronoun.is">pronoun.is</a> and is free software under the <a href="https://github.com/katacarbix/pronouns.js/blob/master/LICENSE">AGPLv3</a>.
+		<div class="container py-3 text-muted small">
+			Written with ❤ by <a href="https://github.com/katacarbix" target="_blank">Reese Jacobson</a>, whose <a href="https://pronoun.is/they/.../themself" target="_blank">pronoun.is/they</a>.<br>
+			Pronouns.js is a fork of <a href="https://github.com/witch-house/pronoun.is" target="_blank">pronoun.is</a> and is free software under the <a href="https://github.com/katacarbix/pronouns.js/blob/master/LICENSE" target="_blank">AGPLv3</a>.
 		</div>
     </footer>
 	
